--- a/input.css
+++ b/input.css
@@ -13,6 +13,18 @@
     h4 {
         @apply text-lg;
     }
+
+    .succsess-badge {
+        @apply text-xl bg-emerald-900 bg-opacity-70 text-green-400 p-2 pl-5 rounded-full font-bold
+    }
+
+    .warning-badge {
+        @apply text-xl bg-amber-700 bg-opacity-70 text-amber-400 p-2 pl-5 rounded-full font-bold
+    }
+
+    .error-badge {
+        @apply text-xl bg-red-900 bg-opacity-70 text-red-400 p-2 pl-5 rounded-full font-bold
+    }
 }
 
 @tailwind components;
