--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -439,6 +439,19 @@ h4 {
   line-height: 1.75rem;
 }
 
+.succsess-badge {
+  border-radius: 9999px;
+  background-color: rgb(6 78 59 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.7;
+  padding: 0.5rem;
+  padding-left: 1.25rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -593,12 +606,36 @@ h4 {
   margin-top: 1rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
 
 .ml-1 {
   margin-left: 0.25rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .block {
@@ -609,28 +646,40 @@ h4 {
   display: flex;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-12 {
-  height: 3rem;
+.hidden {
+  display: none;
 }
 
 .h-16 {
   height: 4rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-\[580px\] {
   height: 580px;
 }
 
-.w-\[85\%\] {
-  width: 85%;
+.h-24 {
+  height: 6rem;
 }
 
-.w-screen {
-  width: 100vw;
+.h-8 {
+  height: 2rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .w-14 {
@@ -639,6 +688,18 @@ h4 {
 
 .w-auto {
   width: auto;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .flex-grow {
@@ -651,6 +712,10 @@ h4 {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .flex-row {
@@ -677,6 +742,10 @@ h4 {
   gap: 1.25rem;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -685,8 +754,8 @@ h4 {
   border-radius: 0.25rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.border {
+  border-width: 1px;
 }
 
 .border-black {
@@ -708,13 +777,13 @@ h4 {
   --tw-bg-opacity: 0.3;
 }
 
+.bg-opacity-40 {
+  --tw-bg-opacity: 0.4;
+}
+
 .object-scale-down {
   -o-object-fit: scale-down;
      object-fit: scale-down;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .p-5 {
@@ -725,6 +794,10 @@ h4 {
   padding: 0px;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -733,20 +806,35 @@ h4 {
   padding-bottom: 3rem;
 }
 
-.pl-36 {
-  padding-left: 9rem;
-}
-
-.pr-36 {
-  padding-right: 9rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-24 {
   padding-top: 6rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-\[500\%\] {
   font-size: 500%;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -772,4 +860,44 @@ h4 {
 .hover\:text-\[\#004E7B\]:hover {
   --tw-text-opacity: 1;
   color: rgb(0 78 123 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:w-\[85\%\] {
+    width: 85%;
+  }
+
+  .md\:w-\[15\%\] {
+    width: 15%;
+  }
+
+  .md\:border-r-2 {
+    border-right-width: 2px;
+  }
+
+  .md\:pl-36 {
+    padding-left: 9rem;
+  }
+
+  .md\:pr-36 {
+    padding-right: 9rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:block {
+    display: block;
+  }
 }
