--- a/templates/svelte.html
+++ b/templates/svelte.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Bun, Buchta, JS, JavaScript, TS, TypeScript">
+    <meta name="author" content="Ján Gajdoš">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Buchta.js is a powerful Full-Stack Framework for Bun">
     <meta content="Buchta.js" property="og:title" />
     <meta content="Buchta.js is a powerful Full-Stack Framework for Bun" property="og:description" />
     <meta property="og:image" content="/cover.png">
@@ -11,7 +14,7 @@
     <meta property="og:image:height" content="1080">
     <meta property="twitter:card" content="summary_large_image">
     <meta content="#00bf72" data-react-helmet="true" name="theme-color" />
-    <title>Buchta.js</title>
+    <title>Buchta</title>
     <link rel="stylesheet" href="/global.css">
     <link rel="stylesheet" href="/tailwind.css">
     <link rel="stylesheet" href="/hljs.css">
