--- a/input.css
+++ b/input.css
@@ -14,6 +14,10 @@
         @apply text-lg;
     }
 
+    .info-badge {
+        @apply text-xl bg-blue-900 bg-opacity-70 text-cyan-400 p-2 pl-5 rounded-full font-bold
+    }
+
     .succsess-badge {
         @apply text-xl bg-emerald-900 bg-opacity-70 text-green-400 p-2 pl-5 rounded-full font-bold
     }
@@ -24,6 +28,26 @@
 
     .error-badge {
         @apply text-xl bg-red-900 bg-opacity-70 text-red-400 p-2 pl-5 rounded-full font-bold
+    }
+
+    .docs-notebook {
+        @apply flex flex-col border rounded-md p-2;
+    }
+
+    .docs-notebook > .notebook-top {
+        @apply flex flex-row justify-center gap-2.5 border-b pb-2;
+    }
+
+    .docs-notebook > .notebook-top > div {
+        @apply font-bold border rounded-md p-2.5;
+    }
+
+    .docs-notebook > .notebook-top > div:is(.notebook-top-active) {
+        @apply font-bold border rounded-md p-2.5 bg-white text-black;
+    }
+
+    .docs-list-base {
+        @apply bg-blue-900 bg-opacity-70 text-cyan-400 border-blue-400 border-r font-bold p-2.5 w-[50%];
     }
 }
 
