--- a/templates/svelte.html
+++ b/templates/svelte.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="Bun, Buchta, JS, JavaScript, TS, TypeScript">
     <meta name="author" content="Ján Gajdoš">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Buchta.js is a powerful Full-Stack Framework for Bun">
-    <meta content="Buchta.js" property="og:title" />
-    <meta content="Buchta.js is a powerful Full-Stack Framework for Bun" property="og:description" />
+    <meta name="description" content="Buchta is a powerful Full-Stack Framework for Bun">
+    <meta content="Buchta" property="og:title" />
+    <meta content="Buchta is a powerful Full-Stack Framework for Bun" property="og:description" />
     <meta property="og:image" content="/cover.png">
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
