--- a/input.css
+++ b/input.css
@@ -6,47 +6,86 @@
     }
 
     h1 {
-      @apply text-3xl;
+        @apply text-xl;
     }
+
     h2 {
-      @apply text-2xl;
-    }
-    h3 {
-      @apply text-xl;
-    }
-    h4 {
         @apply text-lg;
     }
 
+    h3 {
+        @apply text-base;
+    }
+
+    h4 {
+        @apply text-sm;
+    }
+
     .info-badge {
-        @apply text-xl bg-blue-900 bg-opacity-70 text-cyan-400 p-2 pl-5 rounded-full font-bold
+        @apply text-lg text-center bg-blue-900 bg-opacity-70 text-cyan-400 p-5 pl-5 rounded-full font-bold
     }
 
     .succsess-badge {
-        @apply text-xl bg-emerald-900 bg-opacity-70 text-green-400 p-2 pl-5 rounded-full font-bold
+        @apply text-lg text-center bg-emerald-900 bg-opacity-70 text-green-400 p-5 pl-5 rounded-full font-bold
     }
 
     .warning-badge {
-        @apply text-xl bg-amber-700 bg-opacity-70 text-amber-400 p-2 pl-5 rounded-full font-bold
+        @apply text-lg text-center bg-amber-700 bg-opacity-70 text-amber-400 p-5 pl-5 rounded-full font-bold
     }
 
     .error-badge {
-        @apply text-xl bg-red-900 bg-opacity-70 text-red-400 p-2 pl-5 rounded-full font-bold
+        @apply text-lg text-center bg-red-900 bg-opacity-70 text-red-400 p-5 pl-5 rounded-full font-bold
+    }
+
+    @media (min-width: 768px) {
+
+        h1 {
+            @apply text-3xl;
+        }
+
+        h2 {
+            @apply text-2xl;
+        }
+
+        h3 {
+            @apply text-xl;
+        }
+
+        h4 {
+            @apply text-lg;
+        }
+
+        .info-badge {
+            @apply text-xl text-left bg-blue-900 bg-opacity-70 text-cyan-400 p-2 pl-5 rounded-full font-bold
+        }
+    
+        .succsess-badge {
+            @apply text-xl text-left bg-emerald-900 bg-opacity-70 text-green-400 p-2 pl-5 rounded-full font-bold
+        }
+    
+        .warning-badge {
+            @apply text-xl text-left bg-amber-700 bg-opacity-70 text-amber-400 p-2 pl-5 rounded-full font-bold
+        }
+    
+        .error-badge {
+            @apply text-xl text-left bg-red-900 bg-opacity-70 text-red-400 p-2 pl-5 rounded-full font-bold
+        }
+
     }
 
     .docs-notebook {
-        @apply flex flex-col border rounded-md p-2;
+        @apply flex flex-col border rounded-md p-2 overflow-x-auto;
     }
 
-    .docs-notebook > .notebook-top {
+    .docs-notebook>.notebook-top {
         @apply flex flex-row justify-center gap-2.5 border-b pb-2;
     }
 
-    .docs-notebook > .notebook-top > div {
+    .docs-notebook>.notebook-top>div {
         @apply font-bold border rounded-md p-2.5 cursor-pointer;
     }
 
-    .docs-notebook > .notebook-top > div:is(.notebook-top-active) {
+    .docs-notebook>.notebook-top>div:is(.notebook-top-active) {
         @apply font-bold border border-primary-hover rounded-md p-2.5 bg-secondary text-white cursor-default;
     }
 
@@ -58,7 +97,7 @@
         font-weight: bold;
         @apply w-fit;
     }
-    
+
     .docs-page h1:hover {
         @apply text-secondary;
     }
